Updated code for rust 1.3.0
Updated code so it compiles against 1.3.0.

Added basic triple parsing for telling nasm output format.
Added check for whether to tell nasm to compile with debug info.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-authors = ["Allen Goodman <allen@goodman.io>"]
+authors = ["Allen Goodman <allen@goodman.io>", "Gavin Massey <mdk@mystacktrace.org>"]
 description = "Run NASM during your Cargo build."
-homepage = "https://github.com/goodmanio/nasm"
+homepage = "https://github.com/medek/nasm-rs"
 keywords = ["assembler", "assembly", "build-dependencies", "cargo", "nasm"]
-license = "MIT"
 license-file = "LICENSE"
 name = "nasm"
 readme = "README.markdown"
-repository = "https://github.com/goodmanio/nasm.git"
-version = "0.0.1"
+repository = "https://github.com/medek/nasm-rs"
+version = "0.0.2"
