Renaming so it can go on crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Run NASM during your Cargo build."
 homepage = "https://github.com/medek/nasm-rs"
 keywords = ["assembler", "assembly", "build-dependencies", "cargo", "nasm"]
 license-file = "LICENSE"
-name = "nasm"
+name = "nasm-rs"
 readme = "README.markdown"
 repository = "https://github.com/medek/nasm-rs"
 version = "0.0.2"
