--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ authors = ["Allen Goodman <allen@goodman.io>", "Gavin Massey <mdk@mystacktrace.o
 description = "Run NASM during your Cargo build."
 homepage = "https://github.com/medek/nasm-rs"
 keywords = ["assembler", "assembly", "build-dependencies", "cargo", "nasm"]
-license-file = "LICENSE"
+license = "MIT"
 name = "nasm-rs"
 readme = "README.markdown"
 repository = "https://github.com/medek/nasm-rs"
-version = "0.0.2"
+version = "0.0.3"
