--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ["Allen Goodman <allen@goodman.io>", "Gavin Massey <mdk@mystacktrace.org>", "Jerome Rasky <jyrome.112@gmail.com>"]
+authors = ["Allen Goodman <allen@goodman.io>", "Gavin Massey <mdk@mystacktrace.org>", "Jerome Rasky <jyrome.112@gmail.com>", "Justinas Stankevičius <justinas@users.noreply.github.com>"]
 description = "Run NASM during your Cargo build."
 homepage = "https://github.com/medek/nasm-rs"
 keywords = ["assembler", "assembly", "build-dependencies", "cargo", "nasm"]
@@ -7,4 +7,4 @@ license = "MIT OR Apache-2.0"
 name = "nasm-rs"
 readme = "README.markdown"
 repository = "https://github.com/medek/nasm-rs"
-version = "0.0.5"
+version = "0.0.6"
