--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [package]
-authors = ["Allen Goodman <allen@goodman.io>", "Gavin Massey <mdk@mystacktrace.org>", "Jerome Rasky <jyrome.112@gmail.com>", "Justinas Stankevičius <justinas@users.noreply.github.com>"]
+authors = [
+    "Allen Goodman <allen@goodman.io>",
+    "Gavin Massey <mdk@mystacktrace.org>",
+    "Jerome Rasky <jyrome.112@gmail.com>",
+    "Justinas Stankevičius <justinas@users.noreply.github.com>",
+    "Kornel Lesinski <kornel@geekhood.net>",
+]
 description = "Run NASM during your Cargo build."
 homepage = "https://github.com/medek/nasm-rs"
 keywords = ["assembler", "assembly", "build-dependencies", "cargo", "nasm"]
