--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ repository = "https://github.com/medek/nasm-rs"
 version = "0.3.0"
 edition = "2018"
 
+[dependencies.log]
+version = "0.4"
+
 [dependencies.jobserver]
 optional = true
 version = "0.1"
